[*] Fixes table layout bug to apply truncate classes

--- a/futurenhs.app/UI/scss/modules/table/_table.scss
+++ b/futurenhs.app/UI/scss/modules/table/_table.scss
@@ -2,6 +2,7 @@
     border-spacing: 0;
     vertical-align: top;
     width: 100%;
+    table-layout: fixed;
 
     @include mq($media-type: print) {
         page-break-inside: avoid;
